<resources>
    <string name="app_name">Trabajo02</string>
    <string name="ingrese_primer_numero">Ingrese primer numero</string>
    <string name="sumar">sumar</string>
    <string name="multiplicar">multiplicar</string>
    <string name="resultado">resultado</string>
    <string name="calculadora">Calculadora</string>
    <string name="ingrese_segundo_numero">Ingrese segundo numero</string>
</resources>